tests/ui/unstable-feature-bound/unstable_feature_bound_free_fn.fail.stderr
error: unstable feature `feat_bar` is used without being enabled.
  --> $DIR/unstable_feature_bound_free_fn.rs:36:5
   |
LL |     bar();
   |     ^^^^^
   |
   = help: The feature can be enabled by marking the current item with `#[unstable_feature_bound(feat_bar)]`
note: required by a bound in `bar`
  --> $DIR/unstable_feature_bound_free_fn.rs:29:1
   |
LL | #[unstable_feature_bound(feat_bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `bar`
LL | fn bar() {
   |    --- required by a bound in this function

error: aborting due to 1 previous error

